// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlankCard matches the snapshot 1`] = `undefined`;

exports[`Card matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    display={true}
    handleCardClick={[Function]}
    location="Colorado"
    stats={
        Object {
            "2004": 0,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3
          className="school-name"
>
          Colorado
</h3>,
        Array [
          <div>
            <p
                        className="light"
            >
                        <img
                                    alt="check icon"
                                    className="icon"
                                    src="cancel.svg"
                        />
                        2004 : 0
            </p>
</div>,
        ],
      ],
      "className": "card",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Colorado",
          "className": "school-name",
        },
        "ref": null,
        "rendered": "Colorado",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": "2004",
        "nodeType": "host",
        "props": Object {
          "children": <p
            className="light"
>
            <img
                        alt="check icon"
                        className="icon"
                        src="cancel.svg"
            />
            2004 : 0
</p>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="check icon"
                className="icon"
                src="cancel.svg"
/>,
              "2004 : 0",
            ],
            "className": "light",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "check icon",
                "className": "icon",
                "src": "cancel.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "2004 : 0",
          ],
          "type": "p",
        },
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="school-name"
>
            Colorado
</h3>,
          Array [
            <div>
              <p
                            className="light"
              >
                            <img
                                          alt="check icon"
                                          className="icon"
                                          src="cancel.svg"
                            />
                            2004 : 0
              </p>
</div>,
          ],
        ],
        "className": "card",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Colorado",
            "className": "school-name",
          },
          "ref": null,
          "rendered": "Colorado",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": "2004",
          "nodeType": "host",
          "props": Object {
            "children": <p
              className="light"
>
              <img
                            alt="check icon"
                            className="icon"
                            src="cancel.svg"
              />
              2004 : 0
</p>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  alt="check icon"
                  className="icon"
                  src="cancel.svg"
/>,
                "2004 : 0",
              ],
              "className": "light",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "check icon",
                  "className": "icon",
                  "src": "cancel.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "2004 : 0",
            ],
            "type": "p",
          },
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BlankCard />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h3
        className="click-district"
>
        click district
</h3>,
      "className": "blank-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "click district",
        "className": "click-district",
      },
      "ref": null,
      "rendered": "click district",
      "type": "h3",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h3
          className="click-district"
>
          click district
</h3>,
        "className": "blank-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "click district",
          "className": "click-district",
        },
        "ref": null,
        "rendered": "click district",
        "type": "h3",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
